[package]
name = "jph-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = {version = "1.50.0", features = ["full"]}
reqwest = { version = "0.13.2", features = ["json"]}
clap = { version = "4.6.0", features = ["derive"] }

