[package]
name = "jph-cli"
version = "0.1.0"
edition = "2024"

[[test]]
name = "posts_test"
path = "test/posts_test.rs"

[dev-dependencies]
mockito = "1"
rstest = "0.26.1"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
clap = { version = "4.6.0", features = ["derive"] }

